[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/main_office/WhatsApp Image 2024-04-19 at 5.40.40 PM.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/rato/rato_04.webp" type="Texture" id=2]
[ext_resource path="res://assets/test_sprites/luz_teste.png" type="Texture" id=3]
[ext_resource path="res://scenes/openCam.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/cam.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/main.gd" type="Script" id=6]
[ext_resource path="res://scenes/open_cmsp.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/cmsp.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/pombo/pombo4.webp" type="Texture" id=9]
[ext_resource path="res://assets/test_sprites/doorbutton_teste.png" type="Texture" id=10]
[ext_resource path="res://assets/main_office/WhatsApp Image 2024-04-19 at 5.40.40 PM (1).jpeg" type="Texture" id=11]
[ext_resource path="res://assets/main_office/WhatsApp Image 2024-04-19 at 5.40.41 PM.jpeg" type="Texture" id=12]
[ext_resource path="res://scenes/office_camera.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/main_office/WhatsApp Image 2024-04-19 at 5.40.41 PM (1).jpeg" type="Texture" id=14]
[ext_resource path="res://assets/aluraman/ALURAMAN3.webp" type="Texture" id=15]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "closed"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.137255 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.137255 ), Color( 0, 0, 0, 0.980392 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_out"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.980392 ), Color( 0, 0, 0, 0.137255 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "light_down"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.980392, 1, 0.768627, 1 ), Color( 0.517647, 0.517647, 0.517647, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "light_up"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.517647, 0.517647, 0.517647, 1 ), Color( 0.980392, 1, 0.768627, 1 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 6 )

[node name="office_sprites" type="Node2D" parent="."]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
position = Vector2( 883, -852 )
scale = Vector2( 0.6, 0.79 )

[node name="door" type="Sprite" parent="office_sprites"]
modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
position = Vector2( 40, 1419 )
texture = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="office_sprites/door"]
autoplay = "closed"
anims/RESET = SubResource( 6 )
anims/closed = SubResource( 4 )
anims/open = SubResource( 5 )

[node name="left_side" type="Sprite" parent="office_sprites"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
position = Vector2( -1240, 1419 )
texture = ExtResource( 12 )

[node name="middle" type="Sprite" parent="office_sprites"]
position = Vector2( -467, 1420 )
texture = ExtResource( 11 )

[node name="left_light" type="Button" parent="."]
margin_left = 187.0
margin_top = 336.0
margin_right = 231.0
margin_bottom = 374.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="right_light" type="Button" parent="."]
margin_left = 1020.0
margin_top = 259.0
margin_right = 1064.0
margin_bottom = 297.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="door" type="Button" parent="."]
margin_left = 1002.0
margin_top = 210.0
margin_right = 1078.0
margin_bottom = 248.0
rect_scale = Vector2( 1.2, 1.2 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true

[node name="openButtons" type="CanvasLayer" parent="."]

[node name="openCam" parent="openButtons" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -383.0
margin_top = -49.0
margin_right = -243.0
margin_bottom = -11.0

[node name="open_cmsp" parent="openButtons" instance=ExtResource( 7 )]
anchor_left = 0.264583
anchor_top = 0.909259
anchor_right = 0.410417
anchor_bottom = 0.97963
margin_left = 1.52588e-05
margin_right = 0.0
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="cam" parent="openButtons" instance=ExtResource( 5 )]
visible = false

[node name="cmsp" parent="openButtons" instance=ExtResource( 8 )]
visible = false

[node name="dark_screen" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -352.0
margin_top = -22.0
margin_right = 1393.0
margin_bottom = 555.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.960784 )

[node name="anim" type="AnimationPlayer" parent="dark_screen"]
autoplay = "default"
anims/default = SubResource( 2 )
anims/fade_in = SubResource( 3 )

[node name="door_rato" type="Sprite" parent="."]
modulate = Color( 0.478431, 0.478431, 0.478431, 1 )
position = Vector2( 1237, 345 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 190.587, 96.7454, 37.986, 223.282 )

[node name="darkness" type="ColorRect" parent="."]
margin_left = 1203.0
margin_top = 32.0
margin_right = 1272.0
margin_bottom = 552.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.137255 )

[node name="anim" type="AnimationPlayer" parent="darkness"]
autoplay = "fade_in"
anims/RESET = SubResource( 9 )
anims/fade_in = SubResource( 7 )
anims/fade_out = SubResource( 8 )

[node name="office_camera" parent="." instance=ExtResource( 13 )]

[node name="window_pombo" type="Sprite" parent="."]
modulate = Color( 0.980392, 1, 0.768627, 1 )
position = Vector2( -108, 237 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 478.279, 391.24 )

[node name="anim" type="AnimationPlayer" parent="window_pombo"]
reset_on_save = false
anims/light_down = SubResource( 12 )
anims/light_up = SubResource( 11 )

[node name="aluraman" type="Sprite" parent="."]
position = Vector2( 563, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 15 )

[connection signal="button_down" from="left_light" to="." method="_on_left_light_button_down"]
[connection signal="button_up" from="left_light" to="." method="_on_left_light_button_up"]
[connection signal="button_down" from="right_light" to="." method="_on_right_light_button_down"]
[connection signal="button_up" from="right_light" to="." method="_on_right_light_button_up"]
[connection signal="pressed" from="door" to="." method="_on_door_pressed"]
